# parallel-dijkstra-comparison

./: .gitignore  CMakeLists.txt  README.md
common/: graph.cpp  graph.hpp
misc/: plot.gp
src/: dijkstra.hpp  main.cpp  parallel_acc.cpp  parallel_cl.cpp  parallel_cpu.cpp  parallel_cuda.cpp  parallel_omp.cpp  sequential.cpp
src/gpu/: dijkstra.cl  dijkstra.cu
